--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -9,6 +9,7 @@
           Cancel
         </button>
         <button
+          [disabled]='(store.isActing$ | async) || (store.isLoading$ | async) || (store.isContentLoading$ | async)'
           (click)='submit()'
           mat-flat-button
           class='ml-3'
@@ -59,6 +60,7 @@
                   <p class='text-muted mb-2'>Thumbnail</p>
                   <hidden-innovation-common-form-field-image
                     controlPath='thumbnailId'
+                    [setImageData]='selectedPack?.thumbnail'
                     [aspectRatio]='aspectRatio.STANDARD'
                     [parentCtrl]='packForm.controls.thumbnailId'
                     (emitImageCtrlData)='packForm.controls.thumbnailId?.setValue($event)'
@@ -71,6 +73,7 @@
                   <p class='text-muted mb-2'>Poster</p>
                   <hidden-innovation-common-form-field-image
                     controlPath='posterId'
+                    [setImageData]='selectedPack?.poster'
                     [aspectRatio]='aspectRatio.CUBE'
                     [parentCtrl]='packForm.controls.posterId'
                     (emitImageCtrlData)='packForm.controls.posterId?.setValue($event)'
@@ -91,21 +94,22 @@
                   <p class='text-muted mb-2'>PDFs and Images</p>
                   <div class='container-fluid p-0'>
                     <div class='row mb-2' *ngFor='let res of imagesAndPdfsArrayCtrl.controls; let i=index;'>
-                      <div class='col-12'>
+                      <div class='col-12 d-flex '>
                         <hidden-innovation-common-form-field-file
                           controlPath='posterId'
+                          [fileData]='selectedResource(i)'
                           [parentCtrl]='imagesAndPdfsArrayCtrl.controls[i]'
                           (emitFileCtrlData)='imagesAndPdfsArrayCtrl.controls[i].setValue($event)'
                           (emitRemoveFile)='imagesAndPdfsArrayCtrl.controls[i].reset($event)'
                         ></hidden-innovation-common-form-field-file>
-                        <button mat-icon-button color='warn' (click)='deleteResourceCtrl(i)'>
+                        <button type='button' [disabled]='(store.isActing$ | async)' mat-icon-button color='warn' class='ml-2' (click)='deleteResourceCtrl(i)'>
                           <mat-icon>delete</mat-icon>
                         </button>
                       </div>
                     </div>
                     <div class='row'>
                       <div class='col-12'>
-                        <button mat-stroked-button type='button' (click)='addResourceCtrl()'>
+                        <button mat-stroked-button [disabled]='(store.isActing$ | async)' type='button' (click)='addResourceCtrl()'>
                           <mat-icon>add</mat-icon>
                           Add
                         </button>
@@ -119,30 +123,55 @@
                   <p class='text-muted mb-2'>URLs</p>
                   <div class='container-fluid p-0'>
                     <div class='row mb-2' *ngFor='let url of urlFormArray.controls; let i=index'>
-                      <div class='col-10'>
-                        <mat-form-field class='w-100'>
-                          <mat-label>Enter URL</mat-label>
-                          <input matInput autocomplete='no' formControlName='{{i}}' type='text'>
-                          <mat-error>
-                            <ng-template
-                              [ngIf]='((urlFormArray.controls[i].touch$ | async) || (urlFormArray.controls[i].dirty$ | async)) && (urlFormArray.controls[i].errors$ | async)'
-                              let-error>
-                              <hidden-innovation-form-field-errors
-                                label='URL'
-                                [error]='error'
-                              ></hidden-innovation-form-field-errors>
-                            </ng-template>
-                          </mat-error>
-                        </mat-form-field>
-                      </div>
-                      <div class='col-2 d-flex justify-content-end'>
-                        <button type='button' mat-icon-button color='warn' (click)='removeUrlCtrl(i)'>
-                          <mat-icon>delete</mat-icon>
-                        </button>
+                      <div class='col-12'>
+                        <div class='container-fluid p-0' formGroupName='{{i}}'>
+                          <div class='row'>
+                            <div class='col-10'>
+                              <mat-form-field class='w-100'>
+                                <mat-label>Enter URL</mat-label>
+                                <input matInput autocomplete='no' formControlName='url' type='text'>
+                                <mat-error>
+                                  <ng-template
+                                    [ngIf]='((urlFormControl(i).controls.url.touch$ | async) || (urlFormControl(i).controls.url.dirty$ | async)) && (urlFormControl(i).controls.url.errors$ | async)'
+                                    let-error>
+                                    <hidden-innovation-form-field-errors
+                                      label='URL'
+                                      [error]='error'
+                                    ></hidden-innovation-form-field-errors>
+                                  </ng-template>
+                                </mat-error>
+                              </mat-form-field>
+                            </div>
+                            <div class='col-2 d-flex justify-content-end'>
+                              <button type='button' [disabled]='(store.isActing$ | async)' mat-icon-button color='warn' (click)='removeUrlCtrl(i)'>
+                                <mat-icon>delete</mat-icon>
+                              </button>
+                            </div>
+                          </div>
+                          <div class='row'>
+                            <div class='col-12'>
+                              <mat-form-field class='w-100'>
+                                <mat-label>{{constantDataService.FIELD_NAME.DESC | titlecase}}</mat-label>
+                                <input matInput autocomplete='no' formControlName='description' type='text'>
+                                <mat-error>
+                                  <ng-template
+                                    [ngIf]='((urlFormControl(i).controls.description.touch$ | async) || (urlFormControl(i).controls.description.dirty$ | async)) && (urlFormControl(i).controls.description.errors$ | async)'
+                                    let-error>
+                                    <hidden-innovation-form-field-errors
+                                      [label]='constantDataService.FIELD_NAME.DESC | titlecase'
+                                      [error]='error'
+                                    ></hidden-innovation-form-field-errors>
+                                  </ng-template>
+                                </mat-error>
+                              </mat-form-field>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                   <button
+                    [disabled]='(store.isActing$ | async)'
                     (click)='addUrlCtrl()'
                     mat-stroked-button
                     color='primary' type='button'>
@@ -159,17 +188,18 @@
           <mat-card-title class='d-flex justify-content-between align-items-center'>
             <h3 class='mat-h3 mb-0 font-sf-pro'>Contents</h3>
             <button
+              [disabled]='(store.isActing$ | async)'
               mat-flat-button
               class='ml-3'
               [matMenuTriggerFor]='menuPack'
-              color='primary' type='submit'>
+              color='primary' type='button'>
               Add
             </button>
             <mat-menu #menuPack='matMenu'>
-              <button mat-menu-item (click)='openContentSelectorDialog()'>
+              <button type='button' mat-menu-item (click)='openContentSelectorDialog()'>
                 <span>Content (Test/Test-Group/Questionnaire)</span>
               </button>
-              <button mat-menu-item (click)='openCreateLessonDialog()'>
+              <button type='button' mat-menu-item (click)='openCreateLessonDialog()'>
                 <span>Lessons</span>
               </button>
             </mat-menu>
@@ -196,10 +226,10 @@
         <ng-template
           [ngIf]='!contentIsValid && ((packForm.controls.content.touch$ | async) || (packForm.controls.content.dirty$ | async))'
           [ngIfElse]='minContentLengthElse'>
-          <mat-error><small>{{formValidationService.testSelectionValidationMessage.minLength}}</small></mat-error>
+          <mat-error><small>{{formValidationService.contentSelectionValidationMessage.minLength}}</small></mat-error>
         </ng-template>
         <ng-template #minContentLengthElse>
-          <mat-hint><small>{{formValidationService.testSelectionValidationMessage.minLength}}</small></mat-hint>
+          <mat-hint><small>{{formValidationService.contentSelectionValidationMessage.minLength}}</small></mat-hint>
         </ng-template>
       </div>
     </div>
