--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -67,38 +67,16 @@
                     </th>
                     <td mat-cell *matCellDef='let element'> {{((element.lessons?.length) || 0)}} </td>
                   </ng-container>
-                  <ng-container matColumnDef='tests'>
+                  <ng-container matColumnDef='content'>
                     <th mat-header-cell
                         *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
                         <span>
-                        Tests
+                        Content
                         </span>
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.tests?.length) || 0)}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='testGroups'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                        <span>
-                        Test Groups
-                        </span>
-                      </div>
-                    </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.testGroups?.length) || 0)}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='questionnaires'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                        <span>
-                        Questionnaires
-                        </span>
-                      </div>
-                    </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.questionnaires?.length) || 0)}} </td>
+                    <td mat-cell *matCellDef='let element'> {{((element.content?.length) || 0)}} </td>
                   </ng-container>
                   <ng-container matColumnDef='status'>
                     <th mat-header-cell
@@ -148,7 +126,7 @@
                         <mat-icon>more_vert</mat-icon>
                       </button>
                       <mat-menu #testListMenu='matMenu'>
-                        <button mat-menu-item [routerLink]='["/packs", "edit", "01"]'>
+                        <button mat-menu-item [routerLink]='["/packs", "edit", row.id]'>
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
