--- a/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
+++ b/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
@@ -1,2 +1,34 @@
-<p>pack-selector works!</p>
+<div class='p-4'>
+  <div mat-dialog-title>
+    <div class='d-flex align-items-center justify-content-between'>
+      <h4 class='mat-h4 text-uppercase text-color__primary mb-3 mr-4 font-calibri font-weight-normal'>
+        PACK LISTING</h4>
+    </div>
+  </div>
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-3'>
+        <mat-form-field class='w-100'>
+          <mat-label>Search</mat-label>
+          <input matInput>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='col-12'>
+        <div mat-dialog-content>
+          <mat-card class='p-0 mt-2'>
+            <div class='container-fluid p-0'>
+              <div class='row'>
+                <div class='col-12'>
+                </div>
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
