--- a/libs/media/src/lib/components/video-picker/video-picker.component.html
+++ b/libs/media/src/lib/components/video-picker/video-picker.component.html
@@ -1,5 +1,4 @@
-<input hidden type="file" accept="video/mp4" (change)='filePicked($event, videoPicker)'   #videoPicker>
-
+<input hidden type="file" accept="video/mp4, video/quicktime" (change)='filePicked($event, videoPicker)'   #videoPicker>
 <button [disabled]='isUploading' mat-stroked-button color='{{isInvalid ? "warn" : "primary"}}' (click)='videoPicker.click()'
         type='button'>
   <mat-icon class='mr-2'>upload</mat-icon>
