--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -130,11 +130,11 @@
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)='store.toggleActive(row.id, row.isPublished)'>
                           <mat-icon>{{row.isPublished ? "block" : "check_circle_outline"}}</mat-icon>
                           <span>{{(row.isPublished ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
                         </button>
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)='deletePack(row.id)'>
                           <mat-icon>delete</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
                         </button>
