feat(OH-634-pack): Image preloader, remove video size limit, add subtitle field, fix update operation and enum fixes, url fixes

--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -421,7 +421,7 @@ table.mat-table {
 .row-react {
   transition: all .4s cubic-bezier(.17,.67,.83,.67);
 
-  &:hover
+  &:hover, &.active
   {
     background-color: #e0e0e0;
   }
