--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -41,6 +41,14 @@
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
+                  <hidden-innovation-common-form-field
+                    label='Subtitle'
+                    controlPath='subTitle'
+                  ></hidden-innovation-common-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
                   <hidden-innovation-common-form-field-textarea
                     [label]='constantDataService.FIELD_NAME.DESC | titlecase'
                     controlPath='description'
