--- a/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
+++ b/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
@@ -3,6 +3,7 @@
     <ng-template [ngIf]='parentCtrl.valid && imageData' [ngIfElse]='imageSelectedElse'>
       <div class='col-auto'>
         <img class='img-fluid'
+             hiddenInnovationImagePreloader
              src='{{imageData?.croppedImage}}'
              [ngStyle]='{"maxHeight": "51px"}'>
       </div>
