--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -69,14 +69,14 @@
                   <ng-container matColumnDef='updated_at'>
                     <th mat-header-cell *matHeaderCellDef>
                       <hidden-innovation-sorting-header-date
-                        [title]='constantDataService.FIELD_NAME.DATE_ADDED | titlecase'
+                        [title]='constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase'
                         [ctrlEnabled]='filters.controls.dateSort?.enabled'
                         [ctrlValue]='filters.controls.dateSort?.value'
                         [isDisabled]='(store.isActing$ | async)'
                         (emitSorting)='updateSorting("dateSort")'
                       ></hidden-innovation-sorting-header-date>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{(element.created_at | date: 'shortDate') || '--'}}</td>
+                    <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
                   </ng-container>
 
                   <ng-container matColumnDef='category'>
