--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -195,6 +195,7 @@
                             <div class='col-12'>
                               <hidden-innovation-common-form-field-tag-autocomplete
                                 label='Subcategory(s)'
+                                [isDisabled]='!isCategoryValid'
                                 [testTags]='utilities.testTags'
                                 [tagTypeEnum]='tagTypeEnum.SUB_CATEGORY'
                                 [tagCategory]='testGroup.controls.category.value'
@@ -262,7 +263,6 @@
                               <mat-form-field class='w-100'>
                                 <mat-label>Input Type</mat-label>
                                 <mat-select formControlName='inputType'>
-                                  <mat-option value='NONE'>None</mat-option>
                                   <mat-option value='NONE'>None</mat-option>
                                   <mat-option *ngFor='let type of testInputTypeIte'
                                               [value]='type'>{{type | replaceUnderscore | titlecase}}</mat-option>
