--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -147,7 +147,7 @@
                           <div class='row mb-2'>
                             <div class='col-12'>
                               <hidden-innovation-common-form-field-textarea
-                                [label]='constantDataService.FIELD_NAME.OUTCOME | titlecase'
+                                [label]='constantDataService.FIELD_NAME.OUTCOMES | titlecase'
                                 controlPath='outcomes'
                               ></hidden-innovation-common-form-field-textarea>
                             </div>
