--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -29,7 +29,7 @@
                 <table mat-table [dataSource]='tests' [trackBy]='trackById' class='w-100'>
 
                   <ng-container matColumnDef='id'>
-                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+                    <th mat-header-cell [width]='70' *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
                   </ng-container>
 
@@ -76,6 +76,9 @@
                           <mat-menu #typeMenu='matMenu'>
                             <mat-selection-list color='primary' (selectionChange)='categoryFilterChange($event)'
                                                 [multiple]='true' class='pt-0'>
+                              <mat-list-option value='NONE'>
+                                <h6 class='mat-h6'>None</h6>
+                              </mat-list-option>
                               <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>
                                 <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>
                               </mat-list-option>
