--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -43,7 +43,7 @@
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
                   </ng-container>
-                  <ng-container matColumnDef='screen'>
+                  <ng-container matColumnDef='location'>
                     <th mat-header-cell *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
@@ -59,7 +59,7 @@
                       </div>
                     </th>
                     <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.screen'> {{(element.screen | maxStringLimit) || '--'}} </td>
+                        [matTooltip]='element.location'> {{(element.location | maxStringLimit) || '--'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='updated_at'>
