fix(pack-test): Add prompt to delete content in pack and test in test group module

--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -138,9 +138,9 @@
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #testOption='matMenu'>
-                      <button type='button' mat-menu-item (click)='deleteSelectedTest(test)'>
+                      <button type='button' mat-menu-item (click)='deleteSelectedTestPrompt(test)'>
                         <mat-icon>delete</mat-icon>
-                        <span>Delete</span>
+                        <span>Remove</span>
                       </button>
                     </mat-menu>
                   </div>
