--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      ADD TEST</h4>
+      ADD TEST OF TYPE - <b>{{category | titlecase}}</b></h4>
     <button mat-icon-button (click)='closeDialog()'>
       <mat-icon>close</mat-icon>
     </button>
@@ -80,28 +80,7 @@
                   </ng-container>
 
                   <ng-container matColumnDef='category'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'
-                                  [disabled]='(store.isActing$ | async)'
-                                  color='{{filters.controls.category?.value ? "primary" : ""}}'>
-                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
-                          </button>
-                          <mat-menu #typeMenu='matMenu'>
-                            <mat-selection-list color='primary' (selectionChange)='categoryFilterChange($event)'
-                                                [multiple]='true' class='pt-0'>
-                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>
-                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>
-                              </mat-list-option>
-                            </mat-selection-list>
-                          </mat-menu>
-                        </div>
-                      </div>
+                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
                     </th>
                     <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
                   </ng-container>
