--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -68,6 +68,7 @@
                     fieldType='INPUT'
                     label='Sub Category'
                     [tagCategory]='testGroup.controls.category.value'
+                    [isDisabled]='!isCategoryValid'
                   ></hidden-innovation-common-form-field-tag-autocomplete>
                 </div>
               </div>
@@ -150,6 +151,7 @@
           </mat-card-content>
           <mat-card-actions>
             <button
+              [disabled]='!isCategoryValid'
               (click)='openTestSelector()'
               color='accent' class='w-100' mat-flat-button
               type='button'>
