feat(test-group): Add test selection category validation

--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -58,6 +58,7 @@
                         ></hidden-innovation-form-field-errors>
                       </ng-template>
                     </mat-error>
+                    <mat-hint>Be Careful! Changing category might reset the selected test options list</mat-hint>
                   </mat-form-field>
                 </div>
               </div>
